Added a CMakeLists.txt file to generate both PMDAs at once.

--- a/src/qmf1/CMakeLists.txt
+++ b/src/qmf1/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required (VERSION 2.6 FATAL_ERROR)
 
 project(QpidPmda)
 
-add_executable(pmdaqpid QpidPmda.cpp ConsoleListener.cpp)
+add_executable(pmdaqpid-qmf1 QpidPmda.cpp ConsoleListener.cpp)
 
 # A quick hack to reference a local pcp-pmda-cpp checkout (https://github.com/pcolby/pcp-pmda-cpp).
 include_directories ("${PROJECT_SOURCE_DIR}/../../../cpp/include")
 
 target_link_libraries(
-    pmdaqpid
+    pmdaqpid-qmf1
     boost_program_options
     pcp
     pcp_pmda
