--- a/src/qmf2/CMakeLists.txt
+++ b/src/qmf2/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required (VERSION 2.6 FATAL_ERROR)
 
 project(QpidPmda)
 
-add_executable(pmdaqpid QpidPmda.cpp)
+add_executable(pmdaqpid-qmf2 QpidPmda.cpp)
 
 # A quick hack to reference a local pcp-pmda-cpp checkout (https://github.com/pcolby/pcp-pmda-cpp).
 include_directories ("${PROJECT_SOURCE_DIR}/../../../cpp/include")
 
 target_link_libraries(
-    pmdaqpid
+    pmdaqpid-qmf2
     boost_program_options
     pcp
     pcp_pmda
