Use the find_package function so cmake can correctly detect boost libraries (eg to determine whether or not '-mt' suffixes are used for the current platform).

--- a/src/qmf1/CMakeLists.txt
+++ b/src/qmf1/CMakeLists.txt
@@ -4,9 +4,11 @@ project(QpidPmda)
 
 add_executable(pmdaqpid-qmf1 QpidPmda.cpp ConsoleListener.cpp)
 
+find_package(Boost COMPONENTS program_options REQUIRED)
+
 target_link_libraries(
     pmdaqpid-qmf1
-    boost_program_options
+    ${Boost_PROGRAM_OPTIONS_LIBRARY}
     pcp
     pcp_pmda
     qmfconsole
