--- a/src/qmf2/CMakeLists.txt
+++ b/src/qmf2/CMakeLists.txt
@@ -4,9 +4,11 @@ project(QpidPmda)
 
 add_executable(pmdaqpid-qmf2 QpidPmda.cpp)
 
+find_package(Boost COMPONENTS program_options REQUIRED)
+
 target_link_libraries(
     pmdaqpid-qmf2
-    boost_program_options
+    ${Boost_PROGRAM_OPTIONS_LIBRARY}
     pcp
     pcp_pmda
 )
