Some progress towards broker argument parsing; not complete yet - will probably extact to a saparate shareable class, complete with its own unit tests.

--- a/src/qmf1/CMakeLists.txt
+++ b/src/qmf1/CMakeLists.txt
@@ -4,11 +4,11 @@ project(QpidPmda)
 
 add_executable(pmdaqpid-qmf1 QpidPmda.cpp ConsoleListener.cpp)
 
-find_package(Boost COMPONENTS program_options REQUIRED)
+find_package(Boost COMPONENTS program_options regex REQUIRED)
 
 target_link_libraries(
     pmdaqpid-qmf1
-    ${Boost_PROGRAM_OPTIONS_LIBRARY}
+    ${Boost_LIBRARIES}
     pcp
     pcp_pmda
     qmfconsole
