Request just the config variable we're after.

--- a/src/qmf1/CMakeLists.txt
+++ b/src/qmf1/CMakeLists.txt
@@ -20,10 +20,10 @@ find_program(PCP_PMCONFIG_EXECUTABLE NAMES pmconfig)
 if (PCP_PMCONFIG_EXECUTABLE)
     message(STATUS "Found pmconfig: ${PCP_PMCONFIG_EXECUTABLE}")
     execute_process(
-        COMMAND ${PCP_PMCONFIG_EXECUTABLE}
-        OUTPUT_VARIABLE PCP_PMCONFIG_OUTPUT
+        COMMAND ${PCP_PMCONFIG_EXECUTABLE} PCP_PMDAS_DIR
+        OUTPUT_VARIABLE PCP_PMDAS_DIR
+        OUTPUT_STRIP_TRAILING_WHITESPACE
     )
-    string(REGEX MATCH "PCP_PMDAS_DIR=[^\n]*" PCP_PMDAS_DIR ${PCP_PMCONFIG_OUTPUT})
     if (PCP_PMDAS_DIR)
         string(SUBSTRING ${PCP_PMDAS_DIR} 14 -1 PCP_PMDAS_DIR)
         message(STATUS "Found PMDAs directory: ${PCP_PMDAS_DIR}")
