Split out the basic logging code from the ConsoleListener class into a separate ConsoleLogger base class.

--- a/src/qmf1/CMakeLists.txt
+++ b/src/qmf1/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(
     pmda${PROJECT_NAME}
     QpidPmda.cpp
     ConsoleListener.cpp
+    ConsoleLogger.cpp
     ConsoleUtils.cpp
 )
 
