--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ install:
     libboost-program-options-dev
     libpcp3 libpcp3-dev libpcp-pmda3 libpcp-pmda3-dev
     libqmfconsole2-dev libqpidclient2-dev libqpidcommon2-dev libqpidtypes1-dev
-  - wget -P /tmp https://github.com/pcolby/pcp-pmda-cpp/archive/master.zip
-  - unzip -d /tmp /tmp/master.zip
-  - pushd /tmp/pcp-pmda-cpp-master/include
+  - wget -P /tmp https://github.com/pcolby/pcp-pmda-cpp/archive/v0.3.0.tar.gz
+  - tar xvzf /tmp /tmp/v0.3.0.tar.gz -C /tmp
+  - pushd /tmp/pcp-pmda-cpp-0.3.0
   - cmake . && sudo make install
   - popd
 
