--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
     libpcp3 libpcp3-dev libpcp-pmda3 libpcp-pmda3-dev
     libqmfconsole2-dev libqpidclient2-dev libqpidcommon2-dev libqpidtypes1-dev
   - wget -P /tmp https://github.com/pcolby/pcp-pmda-cpp/archive/v0.3.0.tar.gz
-  - tar xvzf /tmp /tmp/v0.3.0.tar.gz -C /tmp
+  - tar xvzf /tmp/v0.3.0.tar.gz -C /tmp
   - pushd /tmp/pcp-pmda-cpp-0.3.0
   - cmake . && sudo make install
   - popd
