--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
     libqmfconsole2-dev libqpidclient2-dev libqpidcommon2-dev libqpidtypes1-dev
   - wget -P /tmp https://github.com/pcolby/pcp-pmda-cpp/archive/v0.3.0.tar.gz
   - tar xvzf /tmp/v0.3.0.tar.gz -C /tmp
-  - pushd /tmp/pcp-pmda-cpp-0.3.0
+  - pushd /tmp/pcp-pmda-cpp-0.3.0/include
   - cmake . && sudo make install
   - popd
 
