A small tweak to support cmake 2.6 (cmake 2.6's string(SUBSTRING ...) does not support -1 lengths).

--- a/src/qmf1/CMakeLists.txt
+++ b/src/qmf1/CMakeLists.txt
@@ -55,7 +55,7 @@ if (PCP_PMCONFIG_EXECUTABLE)
         OUTPUT_STRIP_TRAILING_WHITESPACE
     )
     if (PCP_PMDAS_DIR)
-        string(SUBSTRING ${PCP_PMDAS_DIR} 14 -1 PCP_PMDAS_DIR)
+        string(REGEX REPLACE "^PCP_PMDAS_DIR=" "" PCP_PMDAS_DIR ${PCP_PMDAS_DIR})
         message(STATUS "Found PMDAs directory: ${PCP_PMDAS_DIR}")
     endif (PCP_PMDAS_DIR)
 endif (PCP_PMCONFIG_EXECUTABLE)
