Issue #7: Added a Qpid logger to redirect all Qpid diagnostic messages to PCP (via __pmNotifyErr).

--- a/src/qmf1/CMakeLists.txt
+++ b/src/qmf1/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(
     ConsoleListener.cpp
     ConsoleLogger.cpp
     ConsoleUtils.cpp
+    QpidLogger.cpp
 )
 
 find_package(Boost COMPONENTS program_options REQUIRED)
