FATAL_ERROR if QMF libraries cannot be found.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,4 +15,6 @@ if (HAVE_QMF1 OR HAVE_QMF2)
     if (HAVE_QMF2)
         message(STATUS "  QMFv2 (${HAVE_QMF2})")
     endif (HAVE_QMF2)
-endif (HAVE_QMF1 OR HAVE_QMF2)
+else ()
+    message(FATAL_ERROR "Unable to find any QMF libraries.")
+endif ()
