Refactored most of the build system to allow for a single, combined QMF1 + QMF2 binary.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,25 @@ cmake_minimum_required(VERSION 2.6)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
-add_subdirectory(qmf1)
-add_subdirectory(qmf2)
+project(pmdaqpid)
 
+# Add a pmdaqpid target.
+add_executable(
+    ${PROJECT_NAME}
+    ${PROJECT_NAME}.cpp
+    QpidLogger.cpp
+)
+
+find_package(Boost COMPONENTS program_options REQUIRED)
+
+target_link_libraries(
+    ${PROJECT_NAME}
+    ${Boost_LIBRARIES}
+    pcp
+    pcp_pmda
+)
+
+# Detect which QMF libraries are available.
 find_library(HAVE_QMF1 qmfconsole)
 find_library(HAVE_QMF2 qmf2)
 if (HAVE_QMF1 OR HAVE_QMF2)
@@ -17,4 +33,28 @@ if (HAVE_QMF1 OR HAVE_QMF2)
     endif (HAVE_QMF2)
 else ()
     message(FATAL_ERROR "Unable to find any QMF libraries.")
+endif ()
+
+# If QMF1, include the QMF1 source.
+if (HAVE_QMF1)
+    # add #define
+    add_library(
+        ${PROJECT_NAME}-qmf1 STATIC
+        qmf1/QpidPmda.cpp
+        qmf1/ConsoleListener.cpp
+        qmf1/ConsoleLogger.cpp
+        qmf1/ConsoleUtils.cpp
+    )
+    target_link_libraries(
+        ${PROJECT_NAME}
+        ${PROJECT_NAME}-qmf1
+        qmfconsole
+        qpidclient
+        qpidcommon
+    )
+endif ()
+
+# If QMF2, include the QMF2 source.
+if (HAVE_QMF2)
+    message(STATUS "QMF2 support not implemented yet.")
 endif ()
