--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
     libboost-program-options-dev
     libpcp3 libpcp3-dev libpcp-pmda3 libpcp-pmda3-dev
     libqmfconsole2-dev libqpidclient2-dev libqpidcommon2-dev libqpidtypes1-dev
+    pcp
   - wget -P /tmp https://github.com/pcolby/pcp-pmda-cpp/archive/v0.3.4.tar.gz
   - tar xvzf /tmp/v0.3.4.tar.gz -C /tmp
   - pushd /tmp/pcp-pmda-cpp-0.3.4/include
