Extracted the PMDA++ version in the Travis CI config (not sure this is valid; if not, I'll have to use 'env').

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,10 @@ install:
     libpcp3 libpcp3-dev libpcp-pmda3 libpcp-pmda3-dev
     libqmfconsole2-dev libqpidclient2-dev libqpidcommon2-dev libqpidtypes1-dev
     pcp
-  - wget -P /tmp https://github.com/pcolby/pcp-pmda-cpp/archive/v0.3.4.tar.gz
-  - tar xvzf /tmp/v0.3.4.tar.gz -C /tmp
-  - pushd /tmp/pcp-pmda-cpp-0.3.4/include
+  - PCP_PMDA_CPP_VERSION=master
+  - wget -P /tmp https://github.com/pcolby/pcp-pmda-cpp/archive/pcp-pmda-cpp-$PCP_PMDA_CPP_VERSION.gz
+  - tar xvzf /tmp/pcp-pmda-cpp-$PCP_PMDA_CPP_VERSION.tar.gz -C /tmp
+  - pushd /tmp/pcp-pmda-cpp-$PCP_PMDA_CPP_VERSION/include
   - cmake . && sudo make install
   - popd
 
