--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
     libqmfconsole2-dev libqpidclient2-dev libqpidcommon2-dev libqpidtypes1-dev
     pcp
   - PCP_PMDA_CPP_VERSION=master
-  - wget -P /tmp https://github.com/pcolby/pcp-pmda-cpp/archive/pcp-pmda-cpp-$PCP_PMDA_CPP_VERSION.gz
+  - wget -P /tmp https://github.com/pcolby/pcp-pmda-cpp/archive/pcp-pmda-cpp-$PCP_PMDA_CPP_VERSION.tar.gz
   - tar xvzf /tmp/pcp-pmda-cpp-$PCP_PMDA_CPP_VERSION.tar.gz -C /tmp
   - pushd /tmp/pcp-pmda-cpp-$PCP_PMDA_CPP_VERSION/include
   - cmake . && sudo make install
