Download links are slightly different between v1.2.3 and 'master'.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,11 @@ install:
     libpcp3 libpcp3-dev libpcp-pmda3 libpcp-pmda3-dev
     libqmfconsole2-dev libqpidclient2-dev libqpidcommon2-dev libqpidtypes1-dev
     pcp
-  #- PCP_PMDA_CPP_VERSION=pcp-pmda-cpp-0.3.4
-  - PCP_PMDA_CPP_VERSION=master
+  - PCP_PMDA_CPP_VERSION=master # v0.3.4
   - wget --content-disposition --directory-prefix /tmp
     https://github.com/pcolby/pcp-pmda-cpp/archive/$PCP_PMDA_CPP_VERSION.tar.gz
-  - tar xvzf /tmp/$PCP_PMDA_CPP_VERSION.tar.gz -C /tmp
-  - pushd /tmp/$PCP_PMDA_CPP_VERSION/include
+  - tar xvzf /tmp/pcp-pmda-cpp-`echo $PCP_PMDA_CPP_VERSION | sed 's/^v//'`.tar.gz -C /tmp
+  - pushd /tmp/pcp-pmda-cpp`echo $PCP_PMDA_CPP_VERSION | sed 's/^v//'`/include
   - cmake . && sudo make install
   - popd
 
