--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
     libpcp3 libpcp3-dev libpcp-pmda3 libpcp-pmda3-dev
     libqmfconsole2-dev libqpidclient2-dev libqpidcommon2-dev libqpidtypes1-dev
     pcp
-  - PCP_PMDA_CPP_VERSION=master # v0.3.4
+  - PCP_PMDA_CPP_VERSION=v0.4.0
   - wget --content-disposition --directory-prefix /tmp
     https://github.com/pcolby/pcp-pmda-cpp/archive/$PCP_PMDA_CPP_VERSION.tar.gz
   - tar xvzf /tmp/pcp-pmda-cpp-`echo $PCP_PMDA_CPP_VERSION | sed 's/^v//'`.tar.gz -C /tmp
