--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 install:
   - >
     sudo apt-get install -qq
+    cppcheck
     libboost-program-options-dev
     libpcp3 libpcp3-dev libpcp-pmda3 libpcp-pmda3-dev
     libqmfconsole2-dev libqpidclient2-dev libqpidcommon2-dev libqpidtypes1-dev
@@ -26,6 +27,7 @@ before_script:
   - mkdir -p build
 
 script:
+  - cppcheck --error-exitcode=1 --quiet .
   - pushd build
   - cmake .. && make && sudo make install
   - popd
